fixed toggle for dark mode

--- a/src/Components/CustomHook/CustomHook.css
+++ b/src/Components/CustomHook/CustomHook.css
@@ -20,6 +20,9 @@ body.navbar {
 body.dark-mode-toggle > button {
   color: #999;
 }
+.dmcheck {
+  visibility: hidden;
+}
 .navbar {
   top: 0;
   width: 100%;
